--- a/package.json
+++ b/package.json
@@ -18,9 +18,15 @@
   },
   "homepage": "https://github.com/kumudug/RxJS2#readme",
   "devDependencies": {
+    "css-loader": "^0.28.7",
     "expose-loader": "^0.7.3",
+    "file-loader": "^0.11.2",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.5",
+    "style-loader": "^0.18.2",
     "ts-loader": "^2.3.4",
     "typescript": "^2.4.2",
+    "url-loader": "^0.5.9",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1"
   },
