--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/kumudug/RxJS2#readme",
   "devDependencies": {
+    "copy-webpack-plugin": "^4.1.0",
     "css-loader": "^0.28.7",
     "expose-loader": "^0.7.3",
     "file-loader": "^0.11.2",
